@@ -1,5 +1,8 @@
-timing_180731: Refactored implementation of append/write modes; tweaked
-               "running processes" logic and output format
+timing_180822: Fixed perf_mod.F90 bug that prevents PAPI derived events 
+               from being recognized.
+               [Patrick Worley]
+timing_180731: Refactored implementation of append/write modes;
+               collected and output "on" events for global statistics
                [Patrick Worley]
 timing_180730: Added support for setting GPTLmaxthreads. Cleaned up white space.
                Added SEQUENTIAL to fortran open, to avoid problems on some systems.
